Issue #15011 - Fix `PathResource.resolve(String)` failure `Illegal char <:>` on Microsoft Windows. (#15020)
* Correct resolve(String) behavior for `file` scheme.
* Improve javadoc on Resource.resolve()